--- a/.gitattributes
+++ b/.gitattributes
@@ -24,18 +24,18 @@ build/vc9/* eol=crlf
 tests/toktx-tests eol=lf
 expandkw eol=lf
 
-# Keyword expansion
-TODO filter=kwexpander
-build/vc9/README[[:space:]]FIRST.txt filter=kwexpander
-include/ktx.h filter=kwexpander ident
-GNUmakefile ident
-include/ktx.h filter=kwexpander ident
-lib/*.[ch] ident
-lib/*.cxx ident
-tests/loadtests/common/at.[ch] ident
-tests/loadtests/common/egltowgl.c ident
-tests/loadtests/gles1/*.c ident
-tests/loadtests/shader-based/*.c ident
-tools/toktx/*.cpp ident
-tools/toktx/*.h ident
-tools/toktx/toktx.cpp filter=kwexpander ident
+#      # Keyword expansion
+#      TODO filter=kwexpander
+#      build/vc9/README[[:space:]]FIRST.txt filter=kwexpander
+#      include/ktx.h filter=kwexpander ident
+#      GNUmakefile ident
+#      include/ktx.h filter=kwexpander ident
+#      lib/*.[ch] ident
+#      lib/*.cxx ident
+#      tests/loadtests/common/at.[ch] ident
+#      tests/loadtests/common/egltowgl.c ident
+#      tests/loadtests/gles1/*.c ident
+#      tests/loadtests/shader-based/*.c ident
+#      tools/toktx/*.cpp ident
+#      tools/toktx/*.h ident
+#      tools/toktx/toktx.cpp filter=kwexpander ident
